--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,30 +1,125 @@
 .navbar {
+	font-size: 21px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 
 	height: 50px;
 	background: #f55a5a;
-}
 
-.studyitem {
+	border-bottom: 1px solid #ddd;
+}
+.studyBody {
+	border-left: 1px solid #ddd;
+}
+.studyitems {
 	display: flex;
 	justify-content: center;
 }
 
-.studyListHeaderContainer {
+.studyItemTopContainer {
 	display: flex;
+}
+.toggleOpenButton {
+	margin-right: 10px;
+	font-size: 16px;
+	width: 65px;
+}
+.toggleOpenButton:hover {
+	background-color: rgb(237, 255, 244);
+	border-color: rgb(83, 117, 96);
+}
+.toggleCloseButton {
+	margin-right: 10px;
+	font-size: 16px;
+	width: 65px;
+}
+.toggleCloseButton:hover {
+	background-color: rgb(255, 241, 234);
+	border-color: rgb(255, 145, 90);
+}
+.studyItemBody {
+	font-size: 16px;
+	margin: 15px;
+
+	display: flex;
+	flex-direction: column;
 }
 
 .studyGroupName {
+	padding-left: 5px;
+
+	height: 32px;
 	background: transparent;
 	border: none;
-	width: 600px;
+	width: 500px;
 	fill: none;
+	font-size: 16px;
+	border-bottom: 1px solid #ddd;
 }
 
-.studyListItemBody {
-	margin: 2px;
+.groupLink {
+	padding-left: 5px;
+	height: 32px;
+	font-size: 16px;
+	margin-bottom: 20px;
+	background: transparent;
+	border: none;
+	width: 800px;
+	fill: none;
+	border-bottom: 1px solid #ddd;
+}
+.topInputAndButton {
 	display: flex;
-	flex-direction: column;
+}
+.urlOpenButton {
+	height: 35px;
+	width: 75px;
+
+	background-color: transparent;
+	border: none;
+	border-bottom: 1px solid #ddd;
+	cursor: pointer;
+}
+
+.groupDesc {
+	padding-left: 5px;
+	font-size: 16px;
+	border-bottom: 1px solid #ddd;
+	background: transparent;
+	border-top: transparent;
+	border-left: transparent;
+	border-right: transparent;
+}
+
+.removeButton {
+	font-size: 14px;
+	padding: 3px 7px 3px 7px;
+	border-width: 1.5px;
+	border-radius: 6px;
+	cursor: not-allowed;
+	display: flex;
+	margin-left: auto;
+}
+.removeButton:hover {
+	background-color: #ff3131;
+}
+.lineBreak {
+	border-bottom: 1px solid #ddd;
+}
+
+.addButton {
+	margin-bottom: -2px;
+	font-size: 18px;
+}
+.moduleText {
+	display: flex;
+	justify-content: flex-end;
+	justify-items: flex-end;
+	margin-right: 8px;
+}
+.moduleButtons {
+	display: flex;
+	justify-content: flex-end;
+	justify-items: flex-end;
 }
