Styled the main page, and correctly added modules for each component. Styling the login page is next.

--- a/styles/StudyItems.module.css
+++ b/styles/StudyItems.module.css
@@ -1,159 +1,15 @@
-.navbar {
-	font-size: 21px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	height: 50px;
-	background: #f55a5a;
-
-	border-bottom: 1px solid #ddd;
-}
-.studyBody {
-	border-left: 1px solid #ddd;
-	margin: 30px;
-}
-.studyitems {
-	display: flex;
-	justify-content: center;
-}
-
-.studyItemTopContainer {
-	display: flex;
-}
-.toggleOpenButton {
-	margin-right: 10px;
-	font-size: 16px;
-	width: 65px;
-}
-.toggleOpenButton:hover {
-	background-color: rgb(237, 255, 244);
-	border-color: rgb(83, 117, 96);
-}
-.toggleCloseButton {
-	margin-right: 10px;
-	font-size: 16px;
-	width: 65px;
-}
-.toggleCloseButton:hover {
-	background-color: rgb(255, 241, 234);
-	border-color: rgb(255, 145, 90);
-}
-.studyItemBody {
-	font-size: 16px;
-	margin: 15px;
-
-	display: flex;
-	flex-direction: column;
-}
-
-.studyGroupName {
-	padding-left: 5px;
-
-	height: 32px;
-	background: transparent;
-	border: none;
-	width: 500px;
-	fill: none;
-	font-size: 16px;
-	border-bottom: 1px solid #ddd;
-}
-
-.studyItemName {
-	padding-left: 5px;
-	height: 32px;
-	background: transparent;
-	border: none;
-	width: 500px;
-	fill: none;
-	font-size: 16px;
-	border-bottom: 1px solid #ddd;
-}
-
-.groupLink {
-	padding-left: 5px;
-	height: 32px;
-	font-size: 16px;
-	margin-bottom: 20px;
-	background: transparent;
-	border: none;
-	width: 800px;
-	fill: none;
-	border-bottom: 1px solid #ddd;
-}
-.topInputAndButton {
-	display: flex;
-}
-.urlOpenButton {
-	height: 35px;
-	width: 75px;
-
-	background-color: transparent;
-	border: none;
-	border-bottom: 1px solid #ddd;
-	cursor: pointer;
-}
-
-.groupDesc {
-	padding-left: 5px;
-	font-size: 16px;
-	border-bottom: 1px solid #ddd;
-	background: transparent;
-	border-top: transparent;
-	border-left: transparent;
-	border-right: transparent;
-}
-
-.removeButton {
-	font-size: 14px;
-	padding: 3px 7px 3px 7px;
-	border-width: 1.5px;
-	border-radius: 5px;
-	cursor: pointer;
-	display: flex;
-	margin-left: auto;
-}
-.removeButton:hover {
-	background-color: #ff3131;
-}
-.confirmButton {
-	padding: 5px;
-	cursor: pointer;
-	margin-right: 5px;
-	border-radius: 5px;
-	border-width: 0.5px;
-}
-.confirmButton:hover {
-	background-color: #ff3131;
-}
-.rejectButton {
-	padding: 5px;
-	cursor: pointer;
-	border-radius: 5px;
-	border-width: 0.5px;
-}
-.rejectButton:hover {
-	background-color: rgb(175, 255, 159);
-}
-
-.lineBreak {
-	border-bottom: 1px solid #ddd;
-}
-
 .addButton {
 	padding: 10px;
-	margin-left: 30px;
+	margin-left: 100px;
 	font-size: 18px;
+	color: #ffffff !important;
+	background-color: #22303c;
+	border-color: #22303c;
+	border-width: 3px;
+	color: black;
+	border-radius: 8px;
 }
-.moduleText {
-	display: flex;
-	justify-content: flex-end;
-	justify-items: flex-end;
-	margin-right: 8px;
-}
-.moduleButtons {
-	display: flex;
-	justify-content: flex-end;
-	justify-items: flex-end;
-	box-shadow: 0px 1px;
+
+.addButton:hover {
+	background-color: #1da1f2;
 }
