--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,3 +8,11 @@ nav {
 	margin: -20px;
 	margin-bottom: 0px;
 }
+.addButton {
+	padding: 10px;
+	margin-left: 30px;
+	font-size: 18px;
+}
+.renderedApp {
+	background-color: #3f3f3f;
+}
