--- a/styles/ConfirmDelete.module.css
+++ b/styles/ConfirmDelete.module.css
@@ -11,6 +11,7 @@
 	border-color: #22303c;
 	border-width: 3px;
 	border-radius: 8px;
+	transition: all 0.3s ease 0s;
 }
 .removeButton:hover {
 	background-color: #ff3131;
@@ -29,6 +30,7 @@
 	border-color: #22303c;
 	border-width: 3px;
 	border-radius: 8px;
+	transition: all 0.3s ease 0s;
 }
 .confirmButton:hover {
 	background-color: #ff3131;
@@ -41,6 +43,7 @@
 	border-color: #22303c;
 	border-width: 3px;
 	border-radius: 8px;
+	transition: all 0.3s ease 0s;
 }
 .rejectButton:hover {
 	background-color: #1da1f2;
