--- a/styles/StudyGroup.module.css
+++ b/styles/StudyGroup.module.css
@@ -7,15 +7,18 @@
 	margin-right: 10px;
 	font-size: 16px;
 	width: 150px;
-	background-color: #1da1f2;
+
+	background-color: #bfbfbf;
+	border-color: #192734;
+
 	border-radius: 8px;
 	border-width: 3px;
 	color: black;
-	border-color: #192734;
 	transition: all 0.3s ease 0s;
+	cursor: pointer;
 }
 .toggleOpenButton:hover {
-	background-color: #8899a6;
+	background-color: #1da1f2;
 	border-color: #192734;
 }
 .toggleCloseButton {
@@ -27,6 +30,7 @@
 	color: #ffffff;
 	border-color: #192734;
 	transition: all 0.3s ease 0s;
+	cursor: pointer;
 }
 .toggleCloseButton:hover {
 	background-color: #1da1f2;
@@ -52,14 +56,16 @@
 	margin-left: 30px;
 	font-size: 18px;
 	color: #ffffff !important;
-	background-color: #22303c;
+	background-color: #1da1f2;
 	border-color: #22303c;
 	border-width: 3px;
 	color: black;
 	border-radius: 8px;
 	transition: all 0.3s ease 0s;
+	cursor: pointer;
 }
 
 .addButton:hover {
-	background-color: #1da1f2;
+	background-color: #22303c;
+	border-color: #1da1f2;
 }
