--- a/styles/StudyItem.module.css
+++ b/styles/StudyItem.module.css
@@ -14,12 +14,13 @@
 	margin-right: 10px;
 	font-size: 16px;
 	width: 65px;
-	background-color: #8899a6;
+	background-color: #bfbfbf;
 	border-color: #22303c;
 	border-width: 3px;
 	border-radius: 8px;
 	color: black;
 	transition: all 0.3s ease 0s;
+	cursor: pointer;
 }
 .toggleOpenButton:hover {
 	background-color: #1da1f2;
@@ -34,6 +35,7 @@
 	color: #ffffff;
 	border-color: #192734;
 	transition: all 0.3s ease 0s;
+	cursor: pointer;
 }
 .toggleCloseButton:hover {
 	background-color: #1da1f2;
