--- a/styles/StudyItems.module.css
+++ b/styles/StudyItems.module.css
@@ -3,14 +3,16 @@
 	margin-left: 100px;
 	font-size: 18px;
 	color: #ffffff !important;
-	background-color: #22303c;
+	background-color: #1da1f2;
 	border-color: #22303c;
 	border-width: 3px;
 	color: black;
 	border-radius: 8px;
 	transition: all 0.3s ease 0s;
+	cursor: pointer;
 }
 
 .addButton:hover {
-	background-color: #1da1f2;
+	background-color: #22303c;
+	border-color: #1da1f2;
 }
