--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -3,7 +3,7 @@
 	color: rgb(100, 100, 100);
 	font-size: 14px;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	align-self: flex-end;
 	position: relative;
 	bottom: 0;
