--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -3,17 +3,16 @@
 	color: rgb(100, 100, 100);
 	font-size: 14px;
 	display: flex;
+	/* flex: 1;
+	margin-top: auto;
 	justify-content: space-evenly;
 	align-self: flex-end;
 	position: relative;
 	bottom: 0;
-	width: 98.9%;
+	width: 98.9%; */
 }
-
-.bottomLine {
-	width: 60%;
+.listContainer {
 }
-
 .footerText {
 	border-top: 2px solid #192734;
 	margin-top: 50px;
@@ -22,4 +21,6 @@
 	display: flex;
 	flex-direction: row;
 	gap: 30px;
+	align-items: center;
+	justify-content: center;
 }
