--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -3,8 +3,8 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 18px 30px 5px 50px;
-	height: 50px;
+	padding: 12px 24px;
+	height: 48px;
 	background: #192734;
 	color: #ffffff;
 	box-shadow: black 0px 1px 3px;
