Small changes to CSS to improve small screen performance. Problems with flex/screen size persist on very small screens. Found out adding flex to index's inline style creates the black un styled screen on refresh.

--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,5 +1,8 @@
 /* .allRenderedComps {
-
+	max-width: 100%;
+}
+.header {
+	max-width: 100%;
 } */
 
 .loginContainer {
@@ -31,4 +34,6 @@
 	border: 4px solid #ffffff !important;
 	box-shadow: black 0px 5px 5px;
 	border-radius: 5px;
+}
+.wrapper {
 }
