Timer installed configured and styled. Added Start/pause button and reset button. Use screen media to make the app useable on mobile devices. Known issues: refreshing page the session from Supabase doesn't come back fast enough because of SSR, causing the screen to flash the login page. Delete Group stretches with open/closing study items. Footer won't stick properly to page bottom. Next additions, icons for toggle buttons, open link on study group instead of study link.

--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -2,6 +2,13 @@
 	position: relative;
 }
 
+.relativeWrapper {
+	position: relative;
+}
+.wrapper {
+	position: relative;
+}
+
 .loginContainer {
 	color: #ffffff;
 	margin: 30px;
