--- a/styles/ConfirmDelete.module.css
+++ b/styles/ConfirmDelete.module.css
@@ -60,3 +60,10 @@
 	justify-content: flex-end;
 	justify-items: flex-end;
 }
+
+@media screen and (max-width: 795px) {
+	.removeButton {
+		font-size: 10px;
+		margin-right: 0;
+	}
+}
