--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,22 +1,22 @@
 .footerContainer {
+	height: 100px;
 	padding: 10px;
 	color: rgb(100, 100, 100);
 	font-size: 14px;
 	display: flex;
-	justify-content: space-evenly;
-	align-self: flex-end;
-	bottom: 0;
-	width: 98.9%;
-}
-
-.bottomLine {
-	width: 60%;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: center;
+	/* position: absolute;
+	bottom: -600px;
+	left: 0;
+	right: 0; */
 }
 
 .footerText {
 	border-top: 2px solid #192734;
 	margin-top: 50px;
-	padding: 20px 83px 0px 80px;
+	padding: 20px 80px 0px 80px;
 	list-style: none;
 	display: flex;
 	flex-direction: row;
@@ -25,6 +25,9 @@
 
 @media screen and (max-width: 590px) {
 	.footerText {
+		padding: 10px 40px 0px 40px;
+		font-size: 10px;
 		flex-direction: column;
+		gap: 5px;
 	}
 }
