--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -43,7 +43,11 @@
 		padding: 5px;
 	}
 	.signOut {
-		font-size: 16px;
+		font-size: 12px;
 		padding: 5px 10px 5px 10px;
+	}
+	.loggedInUser {
+		gap: 10px;
+		font-size: 10px;
 	}
 }
