--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -12,7 +12,6 @@
 .loginContainer {
 	color: #ffffff;
 	margin: 30px;
-	max-width: 98.9%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -28,6 +27,7 @@
 }
 .topExplaination {
 	margin-bottom: 30px;
+	padding-top: 10px;
 }
 .explaination {
 	border-bottom: 3px solid #192734;
@@ -38,4 +38,25 @@
 	border: 4px solid #ffffff !important;
 	box-shadow: black 0px 5px 5px;
 	border-radius: 5px;
+}
+
+@media screen and (max-width: 590px) {
+	.loginContainer {
+		margin: 20px;
+		margin-top: 30px;
+	}
+	.title {
+		font-size: 20px;
+		padding: 0px 0px 22px 0px;
+	}
+	.topExplaination {
+		margin-top: 20px;
+		font-size: 15px;
+	}
+	.explaination {
+		padding: 0px 0px 22px 0px;
+		margin-top: 30px;
+		font-size: 15px;
+		text-align: center;
+	}
 }
